# autoport-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  agent_config.yaml  config.yaml  pyproject.toml  server.py
.github/workflows/: claude-code-review.yml  claude.yml
.ptc-agent/: agent.md
docs/: ARTIFACT_TYPES.md
docs/api/: README.md  cache.md  chat.md  conversations.md  models.md  workflow.md  workspaces.md
docs/api/10-chat/: stream-chat.yml
docs/ptc-agent-api/Chat/: Cancel Workflow.yml  Get Active Sessions.yml  Get Workflow Status.yml  HITL Resume.yml  Reconnect to Workflow.yml  Soft Interrupt Workflow.yml  Stream Chat with Skill.yml  Stream Chat.yml  Stream Subagent Status.yml  folder.yml
docs/ptc-agent-api/Portfolio/: Add Portfolio Holding.yml  Delete Portfolio Holding.yml  Get Portfolio Holding.yml  List Portfolio.yml  Update Portfolio Holding.yml  folder.yml
docs/ptc-agent-api/Users/: Create User.yml  Get Current User.yml  folder.yml  (+5 more)
evaluation/: baselines.py  eoh_agent.py  evaluate_detailed.py  evaluation.py  knowledge_base.py  plot_comparison.py  search_graph.py  template.py  utility_objective_functions.py
evaluation/FA_Channel/: test_channel_N_4_U_4_W_2_S_1000_dBm.mat  train_channel_N_4_U_4_W_2_S_1000_dBm.mat
frontend/: MSW_SETUP.md  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
libs/ptc-cli/: README.md  pyproject.toml
mcp_servers/: __init__.py  financial_data_mcp_server.py  fundamentals_mcp_server.py  price_data_mcp_server.py  sinr_evaluator.py  tickertick_mcp_server.py  yfinance_mcp_server.py
mcp_servers/tests/: test_yfinance_mcp.py
prompts/: autoport_system.md
scripts/: migrate.py  setup_checkpoint_tables.py  setup_conversation_tables.py  setup_user_tables.py  start_db.sh
scripts/migrations/: 001_add_thread_title.sql
skills/user-profile/: SKILL.md  onboarding.md
src/config/: __init__.py  agents.py  configuration.py  core.py  logging_config.py  models.py  search_depth.py  settings.py  tool_settings.py  tools.py
src/data_client/: __init__.py
src/data_sources/: __init__.py
src/llms/: __init__.py  api_call.py  content_utils.py  llm.py  pricing_utils.py  result_logger.py  token_counter.py
src/ptc_agent/: __init__.py
src/server/: __init__.py
src/tools/: __init__.py  crawl.py  decorators.py  fetch.py  python_exec.py  search.py  tool_config.yaml
src/utils/: timezone_utils.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: index.css  main.jsx
(+346 files in other folders)
